--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Mugambi Javan</h1>
-        <p class="section__text__p2">Software Engineer</p>
+        <p class="section__text__p2">Software Engineer <br> Ethical Hacker <br> 
+          <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="a2df8b79-f323-4fdd-8004-cd3b1e7ab662" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script></p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/Mugambi Javan Nyaga-CV.pdf')"
+            onclick="window.open('./assets/Mugambi Javan Nyaga.pdf')"
           >
             Download CV
           </button>
@@ -138,19 +139,26 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>Software Engineering<br /> Moringa School</p>
+              <p><b>Software Engineering</b><br /> Moringa School</p>
+              <p> <b>Ethical Hacking</b><br /> Cisco Academy</p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              I'm Javan Mugambi, an adept software engineer with expertise in HTML, CSS, JavaScript, React.js,
-              Next.js, SQL, and RESTful APIs. I excel in crafting responsive web applications and user experiences. 
-              Proficient in TypeScript, I prioritize code maintainability and reliability. With design sensibilities 
-              in Figma and skill in Tailwind CSS and Framer motion, I ensure aesthetic and responsive UIs. I'm passionate 
-              about staying at the forefront of technology and committed to turning your web development ideas into reality. 
-              Let's collaborate and bring your projects to life.
+              Passionate and versatile, I am an intermediate software developer with a proven track 
+              record of crafting visually stunning and responsive user interfaces. My mastery of a 
+              diverse array of technologies, from front-end languages such as HTML, CSS, and JavaScript 
+              to mobile app development with Flutter and Dart, positions me as a dynamic force in the software 
+              development industry. With a robust foundation in both front-end and back-end technologies, 
+              including React.js, Node.js, MongoDB, Ruby on Rails, and SQL, I ensure seamless functionality 
+              across the entire development stack. Beyond coding, my commitment to ethical hacking reflects 
+              my dedication to cybersecurity, contributing to a safer digital world. Holding a Software Engineering 
+              degree from Moringa School, React Developer certification from Andela, and an Ethical Hacker credential 
+              from Networking CISCO Academy, I am driven by a passion for delivering high-quality software solutions 
+              that address complex challenges and elevate user experiences.
             </p>
           </div>
+          
         </div>
       </div>
       <img
@@ -196,6 +204,7 @@
           />
           <p><a href="https://www.linkedin.com">LinkedIn</a></p>
         </div>
+        
       </div>
     </section>
     <footer>
