--- a/index.html
+++ b/index.html
@@ -10,34 +10,10 @@
     <link href="assets/logo.png" rel="icon">
   </head>
   <body>
-    <nav id="desktop-nav">
-      <div class="logo">Mugambi Javan</div>
-      <div>
-        <ul class="nav-links">
-          <li><a href="#about">About</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </div>
-    </nav>
-    <nav id="hamburger-nav">
-      <div class="logo">Mugambi Javan</div>
-      <div class="hamburger-menu">
-        <div class="hamburger-icon" onclick="toggleMenu()">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-        <div class="menu-links">
-          <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-          <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
-        </div>
-      </div>
-    </nav>
+  
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/javo.png" alt="John Doe profile picture" />
+        <img src="./assets/javo.png" alt="profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -168,48 +144,6 @@
         onclick="location.href='./#experience'"
       />
     </section>
-    
-    <section id="projects">
-      <p class="section__text__p1">Browse My Recent</p>
-      <h1 class="title">Projects</h1>
-      <div class="experience-details-container">
-        <div class="about-containers">
-          <iframe src="https://projects-exhibit.vercel.app/" width="100%" height="700px" frameborder="0"></iframe>
-        </div>
-      </div>
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#contact'"
-      />
-    </section>
-    <section id="contact">
-      <p class="section__text__p1">Get in Touch</p>
-      <h1 class="title">Contact Me</h1>
-      <div class="contact-info-upper-container">
-        <div class="contact-info-container">
-          <img
-            src="./assets/email.png"
-            alt="Email icon"
-            class="icon contact-icon email-icon"
-          />
-          <p><a href="mailto:mugambijavan@gmail.com">mugambijavan@gmail.com</a></p>
-        </div> <br>
-        <div class="contact-info-container">
-          <img
-            src="./assets/linkedin.png"
-            alt="LinkedIn icon"
-            class="icon contact-icon"
-          />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
-        </div>
-        
-      </div>
-    </section>
-    <footer>
-      <p>Copyright &#169; 2023 Mugambi Javan. All Rights Reserved.</p>
-    </footer>
     <script src="script.js"></script>
   </body>
 </html>
