--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/Mugambi Javan Nyaga.pdf')"
+            onclick="window.open('./assets/Mugambi Javan Nyaga.docx.pdf')"
           >
             Download CV
           </button>
